# MLOps2

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yaml  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt
.dvc/: config
.github/workflows/: cml.yaml  docker_githubactions.yml  tests.yml
.github/workflows/workflows/: tests.yml
BjarkeCCtemplate/: __init__.py  delete_later_click.py  predict_model.py  train_cml.py  train_model.py
BjarkeCCtemplate/data/: make_dataset.py
BjarkeCCtemplate/models/: model.py
data/processed/: .gitignore  processed_test_images.pt.dvc  processed_train_images.pt.dvc  test_targets.pt  test_targets.pt.dvc  train_targets.pt.dvc
dockerfiles/: docker_test.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model0.001_10_20.pt  model0.001_256_2.pt  model0.001_256_20.pt  model_from_container.pt
other_mlops_files/: request_test.py  requests_gcloud_function.py  website_docker.dockerfile  website_requirement.txt
other_mlops_files/Day9/: lfw_dataset.py
other_mlops_files/app/: m23.py  main.py
other_mlops_files/uploading_model_gclodu/: calling_cloud_function.py  copy_of_cloud_function.py  model.pkl  train_model_knn.py
tests/: test_data.py  test_model.py  test_train_model.py
